# ember_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.nginx  README.md  build.sh  cmake-tools-kits.json  configure_all.sh  launch_vscode.ps1  nginx.conf  serve.sh  setup.ps1  setup_c_cpp_properties.json  setup_cmake-kits.json
blender-scripts/: export.py
blender-scripts/add-ons/: export-goods.py  iqm_export.py
cmake/Modules/: BlenderExports.cmake  FindBlender.cmake  FindCereal.cmake
data/scripts/: bind.lua  init.lua  init_gui.lua  linq.lua  vdom.lua  visitor.lua
data/scripts/actors/: ball.lua  brick.lua  paddle.lua  player.lua  snake.lua
data/scripts/archetypes/: ball.lua  brick.lua  paddle.lua
data/scripts/gui/: all_states.lua
data/scripts/gui/controls/: fps_counter.lua  textbox.lua  version_stamp.lua
data/scripts/gui/scene_gameplay/: root.lua
data/scripts/gui/scene_mainmenu/: root.lua
data/scripts/gui/state_gameplay/: init.lua
data/scripts/gui/state_mainmenu/: init.lua
data/scripts/scenes/: gameplay.lua
data/scripts/systems/: physics.lua  scripting.lua  snakes.lua
data/shaders/: basic.frag  basic.vert  msdf.vert
doc/: scripting.md
ext/metastuff/include/: Meta.h
ext/msdfgen/: CMakeLists.txt
ext/sol2/: CMakeLists.txt
platform/x86_64/data/shaders/: basic.frag  basic.vert  msdf.frag  msdf.vert
src/: components.cpp  components.hpp  main.cpp  meshes.cpp  meshes.hpp  physics.cpp  physics.hpp  scene_gameplay.cpp  scene_gameplay.hpp  scene_mainmenu.cpp  scene_mainmenu.hpp  state_gameplay.cpp  state_gameplay.hpp  state_mainmenu.cpp  state_mainmenu.hpp
src/ember/: box2d_helpers.cpp  box2d_helpers.hpp  box2d_lua.cpp  camera.cpp  camera.hpp  client_engine.cpp  component_common.hpp  component_scripting.hpp  config.hpp  display.hpp  engine.cpp  engine.hpp  engine_constructor.cpp  engine_lua_types.cpp  entities.cpp  entities.hpp  ez3d.cpp  ez3d.hpp  font.cpp  font.hpp  gui.cpp  gui.hpp  json_lua.cpp  json_lua.hpp  json_serializers.hpp  lerpable.hpp  lua_gui.cpp  lua_gui.hpp  lua_system.cpp  lua_system.hpp  math.hpp  math_lua.cpp  net_id.hpp  reflection.hpp  reflection_end.hpp  reflection_start.hpp  render_queue.cpp  render_queue.hpp  resource_cache.hpp  scene.hpp  (+10 more)
src/ember/emberjs/: config.cpp  config.hpp
static/: index.html
static/css/: style.css
static/scripts/: config.js  shell.js
